# zinnia

./: .dockerignore  .env.example  .env.production.example  .env.template  .gitignore  CHANGELOG_NOTIFICATION.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  STRUCTURE_ANALYSIS.md  VAPID_DEPLOYMENT_UPDATE.md  VERIFICATION_CHECKLIST.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
config/: development.toml  production.toml
docs/: API_REFERENCE.md  IMPLEMENTATION_GUIDE.md  MIGRATION_NOTES.md  NOTIFICATION_API_GUIDE.md  NOTIFICATION_FEATURE_SUMMARY.md  NOTIFICATION_IMPLEMENTATION.md  PRODUCTION_DEPLOYMENT.md  SECURITY_ANALYSIS.md  WEB_PUSH_IMPLEMENTATION_SUMMARY.md  WEB_PUSH_TESTING_GUIDE.md  registration-security.md
migrations/: 001_create_devices.sql  001_init_schema.sql  002_add_notification_preferences.sql  002_create_battery_data.sql  003_add_web_push_support.sql  003_create_hypertables.sql  004_create_alerts.sql  005_create_audit_logs.sql  006_create_users.sql  007_add_user_to_devices.sql  008_create_device_access_tokens.sql
nginx/: nginx.conf
nginx/conf.d/: zinnia.conf
nginx/html/: index.html
scripts/: certbot-entrypoint.sh  config-check.sh  deploy.sh  dev.sh  dev_init.sh  enable-https.sh  entrypoint.sh  generate-vapid-keys.sh  init.sh  manage.sh  preflight-check.sh  quick-deploy.sh  redis-entrypoint.sh  renew-ssl.sh  run-tests-with-docker.sh  security-check.sh
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs
src/db/: mod.rs  postgres.rs  redis_client.rs
src/errors/: app_error.rs  mod.rs
src/handlers/: alert_handler.rs  auth_handler.rs  battery_handler.rs  compat_handler.rs  device_handler.rs  device_token_handler.rs  health_handler.rs  mod.rs  notification_handler.rs  user_handler.rs  verification_handler.rs
src/middleware/: audit.rs  auth.rs  logging.rs  mod.rs  rate_limit.rs  request_validator.rs  security_headers.rs
src/models/: alert.rs  audit.rs  battery.rs  common.rs  device.rs  device_token.rs  mod.rs  notification.rs  user.rs
src/repositories/: alert_repo.rs  audit_repo.rs  battery_repo.rs  device_repo.rs  device_token_repo.rs  mod.rs  notification_repo.rs  user_repo.rs
src/routes/: mod.rs
src/security/: crypto.rs  jwt.rs  mod.rs  password.rs  secrets.rs  token.rs
src/services/: alert_service.rs  auth_service.rs  battery_service.rs  cache_service.rs  device_service.rs  device_token_service.rs  email_service.rs  mod.rs  notification_service.rs  recaptcha_service.rs  registration_security_service.rs  user_service.rs  verification_service.rs  web_push_service.rs
src/utils/: cookie.rs  mod.rs  time.rs  validators.rs
src/websocket/: handler.rs  messages.rs  mod.rs  session.rs
tests/: mod.rs
tests/helpers/: mod.rs
tests/integration/: api_tests.rs  mod.rs  web_push_tests.rs
tests/mocks/: mod.rs
tests/unit/: jwt_tests.rs  mod.rs  model_tests.rs  notification_tests.rs  token_tests.rs
